# gitaur

./: .gitignore  HISTORY_VIEW_IMPROVEMENTS.md  QUICK_START_NEW_HISTORY.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: docker-tutorial.md  gitlab-install.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  lib.rs  watcher.rs
src-tauri/src/commands/: git.rs  gitlab.rs  mod.rs  repo.rs  settings.rs
src-tauri/src/git/: error.rs  executor.rs  mod.rs  parser.rs
src-tauri/src/http/: gitee.rs  gitlab.rs  mod.rs
src/components/: ErrorBoundary.tsx  SectionErrorBoundary.tsx
src/components/DiffView/: DiffView.tsx
src/components/FileTree/: FileTree.tsx
src/components/Graph/: CommitDetail.module.css  CommitDetailPanel.tsx  Graph.tsx  HistoryView.module.css  HistoryView.tsx  HistoryViewDemo.tsx  HistoryViewSourceTree.tsx
src/components/Layout/: AppLayout.tsx  BranchItem.tsx  BranchPanel.module.css  BranchPanel.tsx  Titlebar.tsx
src/components/MergeRequest/: CreateMRModal.tsx  MRDetail.tsx  MRList.tsx  MRPage.tsx  ProjectSelector.tsx
src/components/Pipeline/: CreateTaskModal.tsx  PipelineBar.tsx  PipelinePages.tsx  PipelinePanel.module.css  PipelinePanel.tsx
src/components/Settings/: SettingsPage.tsx
src/hooks/: useDebounce.ts  useFileWatcher.ts  useMrPolling.ts
src/services/: gitlab.ts
src/stores/: branchTagStore.ts  gitlabStore.ts  pipelineStore.ts  repoManagerStore.ts  repoStore.ts  settingsStore.ts  viewStore.ts
src/styles/: common.module.css
src/types/: git.ts
src/utils/: clipboard.ts  error.ts  mr.tsx  topology.ts
(+3 files in other folders)
